# plotinator3000

./: .editorconfig  .firebaserc  .gitignore  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  bacon.toml  build.rs  ci.just  clippy.toml  dist-workspace.toml  example_mqtt_pub.bash  flake.nix  index.html  rust-toolchain  rust-toolchain.toml
.cargo/: config.toml
crates/log_if/: Cargo.toml
crates/log_if/src/: lib.rs  log.rs  parseable.rs  plotable.rs  util.rs
crates/mqtt/: Cargo.toml
crates/mqtt/src/: broker_validator.rs  data.rs  data_receiver.rs  known_topics.rs  lib.rs  mqtt_cfg_window.rs  mqtt_listener.rs  parse_packet.rs  topic_discoverer.rs  util.rs
crates/mqtt/src/parse_packet/: known_topic.rs
crates/plot_util/: Cargo.toml
crates/plot_util/src/: lib.rs  mipmap.rs  plot_data.rs  plots.rs
crates/plot_util/src/plots/: plot_data.rs  util.rs
crates/plotinator-background-parser/: Cargo.toml
crates/plotinator-background-parser/src/: lib.rs  loaded_format.rs
crates/plotinator-csv/: Cargo.toml
crates/plotinator-csv/src/: grafnav.rs  lib.rs  njord_ins.rs
crates/plotinator-csv/src/snapshots/: plotinator_csv__grafnav__tests__read_csv-2.snap  plotinator_csv__grafnav__tests__read_csv.snap  plotinator_csv__grafnav__tests__read_csv_test_data-2.snap  plotinator_csv__grafnav__tests__read_csv_test_data.snap  plotinator_csv__njord_ins__tests__read_csv-2.snap  plotinator_csv__njord_ins__tests__read_csv.snap  plotinator_csv__njord_ins__tests__read_csv_test_data-2.snap  plotinator_csv__njord_ins__tests__read_csv_test_data.snap
crates/plotinator-custom-files/: Cargo.toml
crates/plotinator-custom-files/src/: lib.rs
crates/plotinator-download/: Cargo.toml
crates/plotinator-download/src/: downloader.rs  endpoint.rs  lib.rs  manager.rs
crates/plotinator-file-io/: Cargo.toml
crates/plotinator-file-io-ui/: Cargo.toml
crates/plotinator-file-io-ui/src/: lib.rs
crates/plotinator-file-io/src/: custom_files.rs  dropped_files.rs  file_dialog.rs  lib.rs  loaded_files.rs
crates/plotinator-file-io/src/dropped_files/: preview_dropped.rs
crates/plotinator-file-io/src/file_dialog/: native.rs  web.rs
crates/plotinator-hdf5/: Cargo.toml
crates/plotinator-hdf5/src/: altimeter.rs  altimeter_minmax.rs  bifrost.rs  frame_altimeters.rs  frame_gps.rs  frame_inclinometers.rs  frame_magnetometer.rs  gps.rs  inclinometer.rs  lib.rs  njord_altimeter.rs  njord_ins.rs  tsc.rs  util.rs  wasp200.rs
crates/plotinator-hdf5/src/frame_gps/: iter.rs
crates/plotinator-hdf5/src/snapshots/: plotinator_hdf5__frame_altimeters__tests__read_frame_altimeters.snap  plotinator_hdf5__frame_gps__tests__read_frame_gps.snap  plotinator_hdf5__frame_inclinometers__tests__read_frame_inclinometers.snap  plotinator_hdf5__njord_ins__tests__read_njord_ins.snap  plotinator_hdf5__tsc__tests__read_bfield_and_zero_pos-2.snap  plotinator_hdf5__tsc__tests__read_bfield_and_zero_pos.snap  plotinator_hdf5__tsc__tests__read_tsc.snap  plotinator_hdf5__tsc__tests__read_tsc_from_path.snap  plotinator_hdf5__tsc__tests__read_tsc_gps_marks_timestamps.snap
crates/plotinator-hdf5/src/tsc/: gps_marks.rs  gps_pvt.rs  hm.rs  metadata.rs
crates/plotinator-lib/: Cargo.toml
crates/plotinator-lib/src/: lib.rs  updater.rs
crates/plotinator-lib/src/app/: dropped_files.rs  util.rs
crates/plotinator-lib/src/plot/: click_delta.rs  plot_graphics.rs  plot_settings.rs  plot_ui.rs  util.rs
crates/plotinator-lib/src/updater/: ui.rs
crates/plotinator-log-if/: Cargo.toml
crates/plotinator-log-if/src/: algorithms.rs  hdf5.rs  leap_seconds.rs  lib.rs  log.rs  parseable.rs  plotable.rs  rawplot.rs
crates/plotinator-log-if/src/rawplot/: data_type.rs  path_data.rs  rawplot_common.rs
crates/plotinator-logs/: Cargo.toml
crates/plotinator-logs/src/: generator.rs  inclinometer_sps.rs  lib.rs  mag_sps.rs  navsys.rs  navsys_kitchen_sink.rs  util.rs  wasp200.rs
crates/plotinator-logs/src/mbed_motor_control/: mbed_config.rs
crates/plotinator-logs/src/navsys/: entries.rs  header.rs
crates/plotinator-macros/: Cargo.toml
crates/plotinator-macros/src/: lib.rs
crates/plotinator-map/: Cargo.toml
crates/plotinator-map-ui/: Cargo.toml
crates/plotinator-map-ui/src/: commander.rs  draw.rs  geo_path.rs  lib.rs  map_state.rs
crates/plotinator-map-ui/src/draw/: labels.rs
crates/plotinator-map/src/: lib.rs
crates/plotinator-mqtt/: Cargo.toml
crates/plotinator-mqtt-ui/: Cargo.toml
crates/plotinator-mqtt-ui/src/: cfg_window.rs  connection.rs  data_receiver.rs  lib.rs  misc.rs  plot.rs  serializable.rs
crates/plotinator-mqtt/src/: broker_validator.rs  client.rs  data.rs  data_receiver.rs  lib.rs  mqtt_cfg_window.rs  mqtt_listener.rs  parse_packet.rs  topic_discoverer.rs  ui.rs  util.rs
crates/plotinator-plot-ui/: Cargo.toml
crates/plotinator-plot-ui/src/: axis_config.rs  click_delta.rs  lib.rs  plot_graphics.rs  plot_mqtt.rs  plot_settings.rs  plot_ui.rs  util.rs  x_axis_formatter.rs
crates/plotinator-plot-util/: Cargo.toml
crates/plotinator-plot-util/src/: draw_series.rs  filter.rs  lib.rs  mipmap.rs  plots.rs
crates/plotinator-proc-macros/: Cargo.toml
crates/plotinator-proc-macros/src/: lib.rs
crates/plotinator-strfmt/: Cargo.toml
crates/plotinator-strfmt/src/: lib.rs
crates/plotinator-supported-formats/: Cargo.toml
crates/plotinator-supported-formats/src/: csv.rs  hdf5.rs  lib.rs  logs.rs
crates/plotinator-test-util/: Cargo.toml
crates/plotinator-test-util/src/: lib.rs  test_file_defs.rs
crates/plotinator-ui-file-io/: Cargo.toml
crates/plotinator-ui-file-io/src/: lib.rs
crates/plotinator-ui-log-settings/: Cargo.toml
crates/plotinator-ui-log-settings/src/: lib.rs  loaded_log_metadata.rs  log_points_cutter.rs
crates/plotinator-ui-util/: Cargo.toml
crates/plotinator-ui-util/src/: box_selection.rs  date_editor.rs  lib.rs  number_editor.rs
crates/plotinator-updater/: Cargo.toml
crates/plotinator-updater/src/: lib.rs  ui.rs
crates/plotinator3000-h5/: Cargo.toml
crates/plotinator3000-h5/src/: main.rs
crates/plotinator3000-h5/wix/: main.wxs
(+292 files in other folders)
