[package]
name = "plot_util"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
log_if.workspace = true
egui_plot.workspace = true
egui.workspace = true
serde.workspace = true
chrono.workspace = true
num-traits.workspace = true
profiling = { workspace = true, optional = true }
puffin = { workspace = true, optional = true }
puffin_http = { workspace = true, optional = true }

[dev-dependencies]
testresult.workspace = true
pretty_assertions.workspace = true

[features]
default = []
profiling = ["dep:profiling", "dep:puffin", "dep:puffin_http"]
