[package]
name = "plotinator-download"
authors.workspace = true
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# The downloader is only for native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
plotinator-strfmt.workspace = true
strum.workspace = true
strum_macros.workspace = true
anyhow.workspace = true
log.workspace = true
chrono.workspace = true
dirs.workspace = true
reqwest = { workspace = true, default-features = false, features = [
    "blocking",
    "charset",
    "http2",
    "system-proxy",
    "rustls-tls",
] }

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
