[package]
name = "plotinator-file-io-ui"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
eframe.workspace = true
egui.workspace = true
egui-phosphor.workspace = true
env_logger.workspace = true

[lints]
workspace = true
