[package]
name = "plotinator-file-io"
authors.workspace = true
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
plotinator-log-if = { workspace = true }
plotinator-supported-formats = { workspace = true }
plotinator-plot-ui = { workspace = true }
plotinator-plot-util = { workspace = true }
plotinator-ui-file-io = { workspace = true }
plotinator-custom-files = { workspace = true }
plotinator-mqtt = { workspace = true, optional = true }
plotinator-mqtt-ui = { workspace = true, optional = true }
plotinator-hdf5 = { workspace = true }
egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rfd = { workspace = true }
log = { workspace = true }
smallvec = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
plotinator-log-if.workspace = true
plotinator-test-util.workspace = true
testresult.workspace = true

[lints]
workspace = true


[features]
default = []
hdf5 = ["plotinator-supported-formats/hdf5"]
mqtt = ["plotinator-mqtt", "plotinator-mqtt-ui"]
