[package]
name = "plotinator-hdf5"
authors.workspace = true
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
plotinator-proc-macros.workspace = true
plotinator-test-util.workspace = true
plotinator-log-if.workspace = true
plotinator-ui-util.workspace = true
serde.workspace = true
chrono.workspace = true
log.workspace = true
num-traits.workspace = true
toml.workspace = true
anyhow.workspace = true
rayon.workspace = true
ndarray.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hdf5.workspace = true

[dev-dependencies]
testresult.workspace = true
insta.workspace = true
